# Dissertation

./: README.md  UR3_build_menu.sh  UR3_menu.sh  URSIM.sh  backupdocker  container_menu_backup_21072024  docker_config_script.sh  docker_menu.sh  dockerfile  dummy_test_ur3_CMakeLists.txt  enter_running_docker_container  host_gazebo.sh  kernel_rt.sh  kernel_rt_helper.sh  kernel_setup.sh  log.txt  middle_ware_ur3_CMakeLists.txt  middleware_node.cpp  setup.sh  ur3_bringup.launch.py  ur3_setup.sh  ur3_setup_backup.sh
Dissertation/: .bash_history  UR3
discarded_work/: container_menu.sh  menu_backup  setup.sh  setup_ros2_gazebo.sh
dissertation_final/: CMakeLists.txt  docker_menu.sh  dockerfile  host_gazebo.sh  middle_man_node.cpp  setup_container.sh  test.sh  unity_input_subscriber.cpp
dissertation_final/install/: local_setup.sh  setup.ps1  setup.sh
dissertation_final/log/: latest_build
dissertation_final/middle_man/: package.xml
dissertation_final/middle_ware_ur3/: package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: error_log.txt  latest_build
main_dissertation/: README.md  dummy_test_ur3.cpp  middle_ware_ur3.cpp  unity_input_subscriber.cpp  unity_input_subscriber_CMakeLists.txt  ur3_local_setup.sh
middleware_node/: CMakeLists.txt  package.xml
storage/: .bash_history
trial_of_server_part_1/: UR3_urdf_generator.sh  backupdocker  container_menu.sh  docker_menu.sh  dockerbackup2.txt  dockerfile  gzserver_entrypoint.sh  nvidia_docker.sh  ros2_setup.sh  temp_docker.txt  ur3.urdf  ur3_gazebo.launch.py  ur_sim_control.launch.py
(+62 files in other folders)
