<?xml version="1.0"?>
<package format="2">
  <name>middleware_node</name>
  <version>0.0.0</version>
  <description>The middleware_node package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>